outputs/csi300-test/eoh/2025-07-28_17-06-00/evaluations/problem_eval-6330710673784525693_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/csi300/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/csi300/tmp/gpt_temp_2_4baeeaea.py", line 4
    diff_high_low = df['high'].rolling(window=5).max() - df['low'].rolling(window=5).min()
IndentationError: unexpected indent
